added github links to models page

--- a/models.html
+++ b/models.html
@@ -31,6 +31,7 @@
 <li><h3><a href="Models/MOBI/index.html">Model of Ocean Biogeochemistry and Isotopes (MOBI)</a></h3>
 Ocean Biogeochemistry: 2 nutrients (NO<sub>3</sub>, PO<sub>3</sub>), 2 phytoplankton, zooplankton, detritus (2N2PZD) model<br>
 Isotopes: carbon (&#948<sup>13</sup>C) and nitrogen (&#948<sup>15</sup>N) isotopes <br>
+<a href="https://github.com/andreasschmittner/UVic2.9/wiki/Model-of-Ocean-Biogeochemistry-and-Isotopes-(MOBI)">MOBI Github Documentation</a><br>
 
 <li><h3><a href="https://andreasschmittner.github.io/Models/OSUVic/index.html">Oregon State University / University of Victoria Model (OSUVic)</a></h3>
 Global climate model<br>
@@ -47,7 +48,8 @@ Atmosphere: 2-dimensional Energy-Moisture Balance Model (EMBM), 1.8x2.6 deg, 1 v
 Sea Ice: dynamic-thermodynamic</br>
 Land: dynamic vegetation model (TRIFFID/MOSES)<br>
 Ocean Biogeochemistry: 2 nutrients (NO<sub>3</sub>, PO<sub>3</sub>), 2 phytoplankton, zooplankton, detritus (2N2PZD) model (MOBI)<br>
-
+<a href="https://media.oregonstate.edu/channel/UVic%2BTalks/210952743">UVic Model Virtual Seminar Series</a><br>
+<a href="https://github.com/OSU-CEOAS-Schmittner/UVic2.9">UVic 2.9 Github Download & Documentation</a><br>
 </ul>
 </div>
 
