--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -57,7 +57,7 @@ Circulation in the Modern and Glacial Ocean</h1>
 <a id="publications"><h2>Thesis</h2></a>
 <li>Danil Thorstensson (2021)<br>
 <b>Evaluation of a Variable Mixing Efficiency Parameterization on the Simulation of Last Glacial Maximum (LGM) Oceanic Circulation</b>
-<div class="journal"><i>Honors Batchelor of Science Thesis.</i></div>
+<div class="journal"><i>Honors Batchelor of Science Thesis,</i> Oregon State University.</div>
 <div class="publinks">
 <a class="publinks" href="https://ir.library.oregonstate.edu/concern/honors_college_theses/kp78gq00j?locale=en"> html </a>
 <a class="publinks" href="https://ir.library.oregonstate.edu/downloads/mg74qt31f?locale=en"> pdf</a>
