--- a/publications.html
+++ b/publications.html
@@ -614,7 +614,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <li>Appenzeller, C., Stocker, T.F., and Schmittner, A. (2000)<br>
 <b>Climate change and natural climate variability: chance for surprise?</b>
 <div class="journal"><i>Integr. Assessment,</i> 1, 301-306.</div>
-<div class="publinks"><a class="publinks" href="http://journals.sfu.ca/int_assess/index.php/iaj/article/view/195/146"> pdf </a> <a class="publinks" href="http://journals.sfu.ca/int_assess/index.php/iaj/article/view/195"> html </a> </div>
+<div class="publinks"><a class="publinks" href="https://journals.lib.sfu.ca/index.php/iaj/article/download/2612/1898"> pdf </a> <a class="publinks" href="https://link.springer.com/article/10.1023/A:1018908027243"> html </a> </div>
 
 <li>Schmittner, A., Appenzeller, C. and Stocker, T. F. (2000)<br>
 <b>Enhanced Atlantic freshwater export during El Nino</b>
@@ -631,7 +631,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <li>Joos, F., Plattner, G.-K., Stocker, T.F., Marchal, O. and Schmittner, A. (1999)<br>
 <b>Global warming and marine carbon cycle feedbacks on future atmospheric CO<sub>2</sub></b>
 <div class="journal"><i>Science,</i> 284, 464-467. </div>
-<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/J/joos99sci.pdf"> pdf </a><a class="publinks" href="http://www.climate.unibe.ch/%7Eplattner/abstracts/joos99sci.html"> html </a></div>
+<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/J/joos99sci.pdf"> pdf </a><a class="publinks" href="https://science.sciencemag.org/content/284/5413/464"> html </a></div>
 
 <li>Schmittner, A. and Stocker, T. F. (1999)<br>
 <b>The stability of the thermohaline circulation in global warming experiments</b>
