--- a/Projects/AA_ice_ocean/index.html
+++ b/Projects/AA_ice_ocean/index.html
@@ -29,15 +29,15 @@
 
 <h2> Description </h2>
 <h3> Abstract </h3>
-<p></p>
- 
-<p></p>
+<p>The Antarctic ice sheet is an important component of Earth’s climate system, as it interacts with the atmosphere, the surrounding Southern Ocean, and the underlaying solid Earth. It is also the largest potential contributor to future sea level rise and a major uncertainty in climate projections. Climate change may trigger instabilities, which may lead to fast and irreversible collapse of parts of the ice sheet. However, very little is known about how interactions between the Antarctic ice sheet and the rest of the climate system affect its behavior, climate, and sea level, partly because most climate models currently do not have fully-interactive ice sheet components. This project investigates Antarctic ice-ocean interactions of the last 20,000 years. A novel numerical climate model will be constructed that includes an interactive Antarctic ice sheet, improving computational infrastructure for research. The model code will be made freely available to the public on a code-sharing site. Paleoclimate data will be synthesized and compared with simulations of the model. The model-data comparison will address three scientific hypotheses regarding past changes in deep ocean circulation, ice sheet, carbon, and sea level. The project will contribute to a better understanding of ice-ocean interactions and past climate variability.</p>
+
+<p>This project will test suggestions that ice-ocean interactions have been important for setting deep ocean circulation and carbon storage during the Last Glacial Maximum and subsequent deglaciation. The new model will consist of three existing and well-tested components: (1) an isotope-enabled climate-carbon cycle model of intermediate complexity, (2) a model of the combined Antarctic ice sheet, solid Earth and sea level, and (3) an iceberg model. The coupling will include ocean temperature effects on basal melting of ice shelves, freshwater fluxes from the ice sheet to the ocean, and calving, transport and melting of icebergs. Once constructed and optimized, the model will be applied to simulate the Last Glacial Maximum and subsequent deglaciation. Differences between model versions with full, partial or no coupling will be used to investigate the effects of ice-ocean interactions on the Meridional Overturning Circulation, deep ocean carbon storage and ice sheet fluctuations. Paleoclimate data synthesis will include temperature, carbon and nitrogen isotopes, radiocarbon ages, protactinium-thorium ratios, neodymium isotopes, carbonate ion, dissolved oxygen, relative sea level and terrestrial cosmogenic ages into one multi-proxy database with a consistent updated chronology. The project will support an early-career scientist, one graduate student, undergraduate students, and new and ongoing national and international collaborations. Outreach activities in collaboration with a local science museum will benefit rural communities in Oregon by improving their climate literacy.</p>
 
 <p>More details: <a href="Project_Description.pdf">Project Description</a></p>
 
 <div id="opportunity" style="width:1100px;float:left">
 <a id="opportunity"><h2>Opportunity for Post Doctoral Researcher</h2></a>
-<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>. The positon is not officially announced yet. More details will be added here soon.</p>
+<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>.</p>
 </div><!--Opportunity-->
 
 <div id="publications" style="width:1100px;float:left">
