postdoc ads added

--- a/Projects/AA_ice_ocean/index.html
+++ b/Projects/AA_ice_ocean/index.html
@@ -37,7 +37,7 @@
 
 <div id="opportunity" style="width:1100px;float:left">
 <a id="opportunity"><h2>Opportunity for Post Doctoral Researcher</h2></a>
-<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>.</p>
+<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a Ph.D. in climate science, oceanography, physics, mathematics, computer science or a related field and experience in coding please send your CV and a cover letter including the names and contact information of three references to <a href="mailto:andreas.schmittner@oregonstate.edu?subject = Postdoc"> Andreas Schmittner </a>. The posion will be open until filled, at least until Sept. 30. <a href="https://gradschool.oregonstate.edu/postdocs/open-positions#climate-modeling">Announcement at OSU</a></p>
 </div><!--Opportunity-->
 
 <div id="publications" style="width:1100px;float:left">
@@ -45,7 +45,7 @@
 </div><!--Publications-->
 
 <div>
-<h2> Funded by </h2> <p>the National Science Foundation's Office of Polar Programs</p>
+<h2> Funded by </h2> <p>the National Science Foundation's Office of Polar Programs through Paleo Perspectives on Climate Change.</p>
 </div>
 
 <div id="people" style="width:1100px;float:left">
