--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,9 @@
 <ul>
 <li><h3><a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a></h3>
 Funded by: National Science Foundation's Office of Polar Programs<br>
-Award: <br>
-Period: <br>
-Amount: </br>
+Award: 2103032<br>
+Period: 09-01-2021 to 08-31-2024<br>
+Amount: $772,265</br>
 PIs: Schmittner, Clark, Haight<br>
 
 <li><h3><a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning
