--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,14 @@
 <a class="publinks" href="#2020"> 2020 </a>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
+<li>Repschläger et al. (2021)<br> 
+	<b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
+	<div class="journal"><i>Quaternary Science Reviews</i> </div>
+	<div class="publinks">
+		<a class="publinks" href=""></a>
+	</div>
+</li>
+
 <li>Kwon, E. Y., B. J. Tipple, A. Schmittner, and A. Timmermann (2021)<br> 
 	<b>Unprecedented Reversal of the Oceanic &delta;<sup>13</sup>C Gradient Due to Extreme Greenhouse Gas Emissions</b>
 	<div class="journal"><i>Nature Communications</i> </div>
@@ -52,7 +60,7 @@
 </li>
 
 <li>Wilmes, S.-B., A. Schmittner, and J. A. M. Green (2021)<br>
-<b>Was vertical mixing in the glacial ocean enhanced?</b>
+<b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
 <div class="journal"><i>Nature Communications Earth and Environment,</i> doi: .</div>
 <div class="publinks">
 <a class="publinks" href=""> html </a>
