--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -33,13 +33,13 @@ Circulation in the Modern and Glacial Ocean</h1>
 <h3> Abstract </h3>
 <p>Small-scale mixing in the ocean interior affects the large-scale global meridional overturning circulation (MOC) and tracer distributions. However, little is known about how and why mixing has changed in the past, nor what the effects of those changes were on circulation, climate and biogeochemical cycles. This project will examine ocean mixing in the modern and last glacial maximum (LGM) ocean using a combination of numerical modeling and existing observations. In the past, only mixing near sources of turbulence have been considered (near-field effects), but mixing more distant from turbulence sources, carried away by internal waves or wave/current/eddy interactions (far field effects) are now possible to include. New parameterization concepts of diapycnal mixing will be explored in the global coarse-resolution ocean component of an intermediate complexity climate model. Parameterizations of mesoscale eddies will also be evaluated. The model will be calibrated for the modern ocean with modern observations including physical and biogeochemical tracer distributions, and microstructure-based diffusivity estimates. Subsequently, it will be applied to the glacial ocean in a suite of experiments that cover uncertainties in forcing, circulation state and tidal energy input to the internal wave field. Glacial sediment data will be used to evaluate the model simulations and test hypotheses regarding effects of stratification, circulation geometry and tides on diapycnal mixing and effects of southern hemisphere wind changes on the carbon cycle and atmospheric carbon dioxide. The project would improve modeling of paleoclimate and future climate, and foster collaborations between physical oceanographers and paleoceanographers. New model code with user guide and documentation will be posted online with a webinar on model use provided. The project will support an early career post-doctoral investigator and a student. Personnel will be involved in outreach activities at a local museum and in public discussion forums.</p>
  
-<p>Mixing and the meridional overturning circulation during the last glacial period remain controversial. Shoaling of the interface between North Atlantic Deep Water and Antarctic Bottom Water and increased stratification are two mechanisms that have been suggested to reduce diapycnal mixing. On the other hand, a shift of tidal energy input from the continental shelves to the deep ocean due to sea level lowering has been hypothesized to increase diapycnal mixing. A parameterization of far field mixing effects will be incorporated into the Oregon State University (OSU) version of the intermediate-complexity University of Victoria (UVic) global climate model. Tuning  to modern ocean conditions using modern observations followed by assessment of LGM performance using available paleo observations will permit the examination of these science goals: to investigate how diapycnal mixing in the LGM compares to modern magnitudes; how potential differences may have affected the LGM MOC; and what the consequences of such effects would have been for the global carbon cycle. The parameterizations representing far field effects, tested and tuned in the OSU-UVic model, will also be ported to the newest version of the Modular Ocean Model (MOM6) of the Community Earth System Model (CESM), though extensive tuning, testing and evaluation with CESM is not planned.</p>
+<p>Mixing and the meridional overturning circulation during the last glacial period remain controversial. Shoaling of the interface between North Atlantic Deep Water and Antarctic Bottom Water and increased stratification are two mechanisms that have been suggested to reduce diapycnal mixing. On the other hand, a shift of tidal energy input from the continental shelves to the deep ocean due to sea level lowering has been hypothesized to increase diapycnal mixing. A parameterization of far field mixing effects will be incorporated into the Oregon State University (OSU) version of the intermediate-complexity University of Victoria (UVic) global climate model. Tuning  to modern ocean conditions using modern observations followed by assessment of LGM performance using available paleo observations will permit the examination of these science goals: to investigate how diapycnal mixing in the LGM compares to modern magnitudes; how potential differences may have affected the LGM MOC; and what the consequences of such effects would have been for the global carbon cycle. The parameterizations representing far field effects, tested and tuned in the OSU-UVic model, will also be ported to the newest version of the Modular Ocean Model (MOM6) of the Community Earth System Model (CESM), though extensive tuning, testing and evaluation with CESM is not planned. <a> href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2049357">Abstract at NSF"</p>
 
 <p>More details: <a href="Project_Description_no_endnote.pdf">Project Description</a></p>
 
 <div id="opportunity" style="width:1100px;float:left">
 <a id="opportunity"><h2>Opportunity for Post Doctoral Researcher</h2></a>
-<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>. The positon is not officially announced yet. More details will be added here soon.</p>
+<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a Ph.D. in climate science, oceanography, physics, mathematics, computer science or a related field and experience in coding please send your CV and a cover letter including the names and contact information of three references to <a href="mailto:andreas.schmittner@oregonstate.edu?subject = Postdoc"> Andreas Schmittner </a>. The posion will be open until filled, at least until Sept. 30. <a href="https://gradschool.oregonstate.edu/postdocs/open-positions#climate-modeling">Announcement at OSU</a></p>
 </div><!--Opportunity-->
 
 <div id="publications" style="width:1100px;float:left">
@@ -65,7 +65,7 @@ Circulation in the Modern and Glacial Ocean</h1>
 </div><!--Thesis-->
 
 <div>
-<h2> Funded by </h2> <p>the National Science Foundation's Physical Oceanography Program</p>
+<h2> Funded by </h2> <p>the following National Science Foundation Programs: Physical Oceanography, Marine Geology and Geophysics, Antarctic Oceans and Atmospheric Sciences</p>
 </div>
 
 <div id="people" style="width:1100px;float:left">
@@ -76,10 +76,10 @@ Circulation in the Modern and Glacial Ocean</h1>
 <li><a href="https://staff.ucar.edu/users/bachman">Scott Bachman</a>, Co-PI<br>
 <li><a href="https://www.ifm.uni-hamburg.de/en/institute/staff/eden.html">Carsten Eden</a>, Collaborator<br>
 <li><a href="https://www.nbi.ku.dk/english/staff/?pure=en/persons/437464">Markus Jochum</a>, Collaborator<br>
-<li><a href="https://ceoas.oregonstate.edu/people/flaxen-conway">Flaxen Conway</a>, Collaborator<br>
-<li><a href="https://ceoas.oregonstate.edu/people/abby-metzger">Abby Metzger</a>, Collaborator<br>
-<li><a href="https://stem.oregonstate.edu/people/julie-risien">Julie Risien</a>, Collaborator<br>
-<li><a href="https://ceoas.oregonstate.edu/people/desirae-wrathall">Desirae Wrathall</a>, Collaborator<br>
+<li><a href="https://ceoas.oregonstate.edu/people/flaxen-conway">Flaxen Conway</a>, Collaborator (Outreach)<br>
+<li><a href="https://ceoas.oregonstate.edu/people/abby-metzger">Abby Metzger</a>, Collaborator (Outreach)<br>
+<li><a href="https://stem.oregonstate.edu/people/julie-risien">Julie Risien</a>, Collaborator (Outreach)<br>
+<li><a href="https://ceoas.oregonstate.edu/people/desirae-wrathall">Desirae Wrathall</a>, Collaborator (Outreach)<br>
 </ul>
 </div><!--People-->
 
