--- a/outreach.html
+++ b/outreach.html
@@ -28,6 +28,9 @@
 <p>Here some of my outreach activities are listed. Public and scientific presentations are available <a href="presentations.html">here</a>.</p>
 
 <ul>
+
+<li>08-05-2021 Interview with Chris D'Angelo from the Huffington Post <a href="https://www.huffpost.com/entry/atlantic-ocean-current-collapse-study-climate_n_610c20f0e4b06253fa4c3d93">Climate Change Could Shut Down A Vital Ocean Current, Study Finds</a>
+
 <li>07-06-2021 Interview with Katherine Bang from Morning Wave in Busan (S. Korea) <a href="http://www.befm.or.kr/program/template.php?midx=89&pg=morning&cn=morning_sp&mode=view&page=1&intnum=29319"> The Heatwave in Northwest Region in America</a>
 
 <li>06-29-2021 Interview on MSNBC's Meet the Press with Chuck Todd <a href="https://www.msnbc.com/mtp-daily/watch/climate-scientists-sound-alarm-about-record-heatwaves-in-pacific-northwest-115690053864"> Climate scientists sound alarm about record heatwaves in Pacific Northwest</a>
