--- a/projects.html
+++ b/projects.html
@@ -48,14 +48,14 @@ Circulation in the Modern and Glacial Ocean</a></h3>
 Jointly funded by: National Science Foundation's Physical Oceanography and Marine Geology and Geophysics Programs<br>
 Award: 2049352<br>
 Period: 06/15/2021 to 05/31/2024<br>
-Amount: $612,636,</br>
+Amount: $612,636</br>
 PIs: Schmittner, Danabasoglu, Bachman<br>
 
 <li><h3><a href="Projects/Nd">Modeling the Ocean Distribution of Neodymium Isotopes: Testing the Bottom-Up Hypothesis</a></h3>
 Jointly funded by: National Science Foundation's Chemical Oceanography and Marine Geology and Geophysics Programs<br>
 Award: 2022461<br>
 Period: 08/01/2020 to 07/31/2023<br>
-Amount: $599,881,</br>
+Amount: $599,881</br>
 PIs: Schmittner, Haley<br>
 
 <li><h3><a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle
