--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 </div><!--opportunity-->
 
 <h2>Just Published</h2>
+<li>Wilmes, S.-B., A. Schmittner, and J. A. M. Green (2021)<br>
+	<b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
+	<div class="journal"><i>Nature Communications Earth and Environment,</i> doi: .</div>
+	<div class="publinks">
+		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y"> html </a>
+		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y.pdf"> pdf</a>
+	</div>
+</li>
+
 <li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg (2021)<br> 
 	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
 	<div class="journal"><i>Global Biogeochemical Cycles,</i> doi: 10.1029/2021GB006948 </div>
