added Wilmes et al. (2021)

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 </div><!--opportunity-->
 
 <h2>Just Published</h2>
-<li>Wilmes, S.-B., A. Schmittner, and J. A. M. Green (2021)<br>
+<li>Wilmes, S.-B., J. A. M. Green, and A. Schmittner (2021)<br>
 	<b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
-	<div class="journal"><i>Nature Communications Earth and Environment,</i> doi: .</div>
+	<div class="journal"><i>Nature Communications Earth and Environment,</i> doi: https://doi.org/10.1038/s43247-021-00239-y.</div>
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y"> html </a>
 		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y.pdf"> pdf</a>
