--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,6 @@
 <div id="links" style="float:right;width:150px">
 <ul class="menueright">
 <li><a class="menueright" href="Projects/Completed/OC3/index.html">OC3</a></li>
-<li><a class="menueright" href="http://wserv4.esc.cam.ac.uk/pastclimate/?page_id=14">IPODs</a></li>
 <li><a class="menueright" href="#completed">Completed Projects</a></li>
 </ul>
 </div>
@@ -46,7 +45,7 @@ PIs: Schmittner, Clark, Haight<br>
 <li><h3><a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning
 Circulation in the Modern and Glacial Ocean</a></h3>
 Jointly funded by: National Science Foundation's Physical Oceanography and Marine Geology and Geophysics Programs<br>
-Award: 2049352<br>
+Award: 2049357<br>
 Period: 06/15/2021 to 05/31/2024<br>
 Amount: $612,636</br>
 PIs: Schmittner, Danabasoglu, Bachman<br>
@@ -70,6 +69,9 @@ PIs: Schmittner, Khatiwala<br>
 </div>
 <div><h2><a id="completed">Completed Projects</a></h2>
 <ul>
+
+<li><h3><a chref="http://wserv4.esc.cam.ac.uk/pastclimate/?page_id=14">Investigating Past Ocean Dynamics (IPODs)</a>
+Funded by: International Quaternary Association (INQUA)<br>
 
 <li><h3><a href="Projects/Completed/BioPump">The Biological Pump During the Last Glacial Maximum and Early Deglaciation</a></h3>
 Funded by: National Science Foundation's Marine Geology and Geophysics Program<br>
