--- a/publications.html
+++ b/publications.html
@@ -482,7 +482,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <li>Schmittner, A., A. Oschlies, H. D. Matthews, and E. D. Galbraith (2008)<br>
 <b>Future changes in climate, ocean circulation, ecosystems and biogeochemical cycling simulated for a business-as-usual CO<sub>2</sub> emission scenario until year 4000 AD</b>
 <div class="journal"><i>Global Biogeochem. Cycles,</i> 22, GB1013, doi:10.1029/2007GB002953.</div>
-<a class="publinks" href="http://dx.doi.org/10.1029/2007GB002953"> html </a><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner08gbc_corrigendum.pdf"> Correction </a></div>
+<a class="publinks" href="http://dx.doi.org/10.1029/2007GB002953"> html </a></div>
 
 <a id="2007"><h4>2007</h4> </a>
 
