moved years to right menue

--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,14 @@
 
 <div id="links" style="float:right;width:150px">
 <ul class="menueright">
+<li><a class="menueright" href="#2020"> 2020 </a>
+<li><a class="menueright" href="#2019"> 2019 </a>
+<li><a class="menueright" href="#2018"> 2018 </a>
+<li><a class="menueright" href="#2017"> 2017 </a>
+<li><a class="menueright" href="#2016"> 2016 </a>
+<li><a class="menueright" href="#2015"> 2011-2015 </a>
+<li><a class="menueright" href="#2010"> 2001-2010 </a>
+<li><a class="menueright" href="#2000"> 1997-2000 </a>
 <li><a class="menueright" href="#other">Other Publications</a></li>
 <li><a class="menueright" href="#books">Books</a></li>
 </ul>
@@ -33,14 +41,6 @@
 
 <div id="publications" style="float:left;width:950px">
 <h2>Articles in Peer-Reviewed Publications</h2>
-<a class="publinks" href="#2000"> 1997-2000 </a>
-<a class="publinks" href="#2010"> 2001-2010 </a>
-<a class="publinks" href="#2015"> 2011-2015 </a>
-<a class="publinks" href="#2016"> 2016 </a>
-<a class="publinks" href="#2017"> 2017 </a>
-<a class="publinks" href="#2018"> 2018 </a>
-<a class="publinks" href="#2019"> 2019 </a>
-<a class="publinks" href="#2020"> 2020 </a>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
 <li>Repschläger et al. (2021)<br> 
