added Repschlager et al. (2021)

--- a/publications.html
+++ b/publications.html
@@ -43,13 +43,6 @@
 <h2>Articles in Peer-Reviewed Publications</h2>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
-<li>Repschläger et al. (2021)<br> 
-	<b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
-	<div class="journal"><i>Quaternary Science Reviews</i> </div>
-	<div class="publinks">
-		<a class="publinks" href=""></a>
-	</div>
-</li>
 
 <li>Kwon, E. Y., B. J. Tipple, A. Schmittner, and A. Timmermann (2021)<br> 
 	<b>Unprecedented Reversal of the Oceanic &delta;<sup>13</sup>C Gradient Due to Extreme Greenhouse Gas Emissions</b>
@@ -61,9 +54,19 @@
 
 <h3>Published</h3>
 <a id="2021"><h4>2021</h4></a>
+<li>Repschläger, J., N., Zhao, D. Rand, L. Lisiecki, J. Muglia, S. Mulitza, A. Schmittner, O. Cartapanis, H. Bauch, R. Schiebel, and G. Haug (2021)<br> 
+	<b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
+	<div class="journal"><i>Quaternary Science Reviews,</i>270, 107145, 
+		 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.107145">doi: 10.1016/j.quascirev.2021.107145</a>.</div>
+	<div class="publinks">
+		<a class="publinks" href="https://www.sciencedirect.com/science/article/pii/S0277379121003528">html</a>
+	</div>
+</li>
+
 <li>Wilmes, S.-B., J. A. M. Green, and A. Schmittner (2021)<br>
 	<b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
-	<div class="journal"><i>Nature Communications Earth and Environment,</i> doi: https://doi.org/10.1038/s43247-021-00239-y.</div>
+	<div class="journal"><i>Communications Earth & Environment,</i> 2, 166, 
+		<a href="https://doi.org/10.1038/s43247-021-00239-y"> doi: 10.1038/s43247-021-00239-y</a>.</div>
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y"> html </a>
 		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y.pdf"> pdf</a>
@@ -72,7 +75,8 @@
 
 <li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg (2021)<br> 
 	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
-	<div class="journal"><i>Global Biogeochemical Cycles,</i> doi: 10.1029/2021GB006948 </div>
+	<div class="journal"><i>Global Biogeochemical Cycles,</i> 35, (8), 
+		<a class="publinks" href="https://doi.org/10.1029/2021GB006948"> doi: 10.1029/2021GB006948</a>.</div>
 	<div class="publinks">
 		<a class="publinks" href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2021GB006948">html</a>
 		<a class="publinks" href="https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2021GB006948">pdf</a>
@@ -81,7 +85,7 @@
 
 <li>Muglia, J., and A. Schmittner (2021)<br> 
 	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
-	<div class="journal"><i>Quaternary Science Reviews</i>,
+	<div class="journal"><i>Quaternary Science Reviews</i>, 257, 106844, 
 	 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.106844">doi: 10.1016/j.quascirev.2021.106844</div>
 	<div class="publinks">
 		<a class="publinks" href="https://authors.elsevier.com/a/1ceeF-4PR%7ER10">html</a>
