--- a/index.html
+++ b/index.html
@@ -100,21 +100,12 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 </div><!--opportunity-->
 
 <h2>Just Published</h2>
-<li>Wilmes, S.-B., J. A. M. Green, and A. Schmittner (2021)<br>
-	<b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
-	<div class="journal"><i>Nature Communications Earth and Environment,</i> doi: https://doi.org/10.1038/s43247-021-00239-y.</div>
+<li>Repschläger, J., N., Zhao, D. Rand, L. Lisiecki, J. Muglia, S. Mulitza, A. Schmittner, O. Cartapanis, H. Bauch, R. Schiebel, and G. Haug (2021)<br> 
+	<b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
+	<div class="journal"><i>Quaternary Science Reviews,</i>270, 107145, 
+		 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.107145">doi: 10.1016/j.quascirev.2021.107145</a>.</div>
 	<div class="publinks">
-		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y"> html </a>
-		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y.pdf"> pdf</a>
-	</div>
-</li>
-
-<li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg (2021)<br> 
-	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
-	<div class="journal"><i>Global Biogeochemical Cycles,</i> doi: 10.1029/2021GB006948 </div>
-	<div class="publinks">
-		<a class="publinks" href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2021GB006948">html</a>
-		<a class="publinks" href="https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2021GB006948">pdf</a>
+		<a class="publinks" href="https://www.sciencedirect.com/science/article/pii/S0277379121003528">html</a>
 	</div>
 </li>
 
