fixed Wilmes reference

--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
 <li>Wilmes, S.-B., J. A. M. Green, and A. Schmittner (2021)<br>
 	<b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
 	<div class="journal"><i>Communications Earth & Environment,</i> 2, 166, 
-		<a href="https://doi.org/10.1038/s43247-021-00239-y"> doi: 10.1038/s43247-021-00239-y</a>.</div>
+		<a class="publinks" href="https://doi.org/10.1038/s43247-021-00239-y"> doi: 10.1038/s43247-021-00239-y</a>.</div>
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y"> html </a>
 		<a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y.pdf"> pdf</a>
