removed Nd position

--- a/Projects/AA_ice_ocean/index.html
+++ b/Projects/AA_ice_ocean/index.html
@@ -33,6 +33,12 @@
 
 <div id="container" style="width:1100px">
 
+<div id="links" style="float:right;width:150px">
+<ul class="menueright">
+<li><a class="menueright" href="https://www.usap-dc.org/view/project/p0010256">USAP-DC</a></li>
+</ul>
+</div>
+
 <h2> Description </h2>
 <h3> Abstract </h3>
 <p>This project investigates Antarctic ice-ocean interactions of the last 20,000 years. The Antarctic ice sheet is an important component of Earth’s climate system, as it interacts with the atmosphere, the surrounding Southern Ocean, and the underlaying solid Earth. The ice sheet is also the largest potential contributor to future sea level rise and a major uncertainty in climate projections. Climate change may trigger instabilities, which may lead to fast and irreversible collapse of parts of the ice sheet. However, very little is known about how interactions between the Antarctic ice sheet and the rest of the climate system affect its behavior, climate, and sea level, partly because most climate models currently do not have fully-interactive ice sheet components. The project team will construct a numerical climate model that includes an interactive Antarctic ice sheet, improving computational infrastructure for research. The model code will be made freely available to the public on a code-sharing site. Paleoclimate data will be synthesized and compared with simulations of the model. The model-data comparison will address three scientific hypotheses regarding past changes in deep ocean circulation, ice sheet, carbon, and sea level. The project will contribute to a better understanding of ice-ocean interactions and past climate variability.</p>
