fixed link in OSU postdoc announcement

--- a/Projects/AA_ice_ocean/index.html
+++ b/Projects/AA_ice_ocean/index.html
@@ -49,7 +49,7 @@
 
 <div id="opportunity" style="width:1100px;float:left">
 <a id="opportunity"><h2>Opportunity for Post Doctoral Researcher</h2></a>
-<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a Ph.D. in climate science, oceanography, physics, mathematics, computer science or a related field and experience in coding please send your CV and a cover letter including the names and contact information of three references to <a href="https://andreasschmittner.github.io/"> Andreas Schmittner</a>. The posion will be open until filled, at least until Sept. 30, 2021. <a href="https://gradschool.oregonstate.edu/postdocs/open-positions#climate-modeling">Announcement at OSU.</a></p>
+<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a Ph.D. in climate science, oceanography, physics, mathematics, computer science or a related field and experience in coding please send your CV and a cover letter including the names and contact information of three references to <a href="https://andreasschmittner.github.io/"> Andreas Schmittner</a>. The posion will be open until filled, at least until Sept. 30, 2021. <a href="https://gradschool.oregonstate.edu/postdocs/open-positions/15656-two-postdoc-positions-climate-modeling">Announcement at OSU.</a></p>
 </div><!--Opportunity-->
 
 <div id="publications" style="width:1100px;float:left">
