updated Cliff et al.

--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,7 @@
 
 <li>Cliff, E., S. Khatiwala, and A. Schmittner (2021)<br> 
 	<b>Glacial deep ocean deoxygenation driven by biologically mediated air–sea disequilibrium</b>
-	<div class="journal"><i>Nat Geosci</i>, 
+	<div class="journal"><i>Nature Geoscience</i>, 14, 43-50, 
 		<a class="publinks" href="https://doi.org/10.1038/s41561-020-00667-z">doi: 10.1038/s41561-020-00667-z</a>.
 	</div>
 	<div class="publinks">
