removed AA ice postdoc opportunity announcement

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 Corvallis OR 97331-5503, USA<br>
 phone: 541-737-2659<br>
 fax: 541-737-2064<br>
-email: aschmitt(at)coas.oregonstate.edu<p></div>
+email: aschmitt(at)coas.oregonstate.edu<br>
+office: Burt 360<p></div>
 
 </div id="header"><!--header-->
 
@@ -94,7 +95,6 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 <p>I'm looking for 
 	<ul>
 	<li>a <b>post-doctoral researcher</b> interested in <a href="Projects/LGM_mixing/">modeling mixing</a> in the ocean and its effects on the global circulation in modern and ice-age climates. If you have experience in numerical modeling please contact me.
-	<li>a <b>post-doctoral researcher</b> interested in <a href="Projects/AA_ice_ocean/">modeling ice-ocean interactions</a> particularly those involving the Antarctic ice sheet and Southern Ocean. If you have experience in numerical modeling please contact me.
 	</p>
 </div><!--opportunity-->
 
