fixed Somes et al. 2010reference

--- a/publications.html
+++ b/publications.html
@@ -447,7 +447,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <li>Somes, C. J., Schmittner, A. and Altabet, M. A. (2010)<br>
 <b>Nitrogen isotope simulations show the importance of atmospheric iron deposition for nitrogen fixation across the Pacific Ocean</b>
 <div class="journal"><i>Geophys. Res. Lett.,</i> 37, L23605, doi:10.1029/2010GL044537.</div>
-<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/somes10grl.pdf"> pdf </a><a class="publinks" href="http://www.agu.org/pubs/crossref/2010/2010GL044537.shtml"> html </a></div>
+<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/somes10grl.pdf"> pdf </a><a class="publinks" href=" https://doi.org/10.1029/2010GL044537"> html </a></div>
 
 <li>Goes, M., Urban, N. M., Tonkonojenkov, R., Haran, M., Schmittner, A., and Keller, K., (2010)<br>
 <b>What is the skill of ocean tracers in reducing uncertainties about ocean diapycnal mixing and projections of the Atlantic Meridional Overturning Circulation?</b>
