--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@ PIs: Schmittner, Khatiwala<br>
 <div><h2><a id="completed">Completed Projects</a></h2>
 <ul>
 
-<li><h3><a chref="http://wserv4.esc.cam.ac.uk/pastclimate/?page_id=14">Investigating Past Ocean Dynamics (IPODs)</a>
+<li><h3><a chref="http://wserv4.esc.cam.ac.uk/pastclimate/?page_id=14">Investigating Past Ocean Dynamics (IPODs)</a></h3>
 Funded by: International Quaternary Association (INQUA)<br>
 
 <li><h3><a href="Projects/Completed/BioPump">The Biological Pump During the Last Glacial Maximum and Early Deglaciation</a></h3>
