--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,14 @@
 
 <a id="in review"><h3>In Review / In Press</h3></a>
 
+<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2021)<br> 
+	<b>UWorld Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
+	<div class="journal"><i>Earth System Science Data</i> </div>
+	<div class="publinks">
+		<a class="publinks" href=""></a>
+	</div>
+</li>
+
 <li>Kwon, E. Y., B. J. Tipple, A. Schmittner, and A. Timmermann (2021)<br> 
 	<b>Unprecedented Reversal of the Oceanic &delta;<sup>13</sup>C Gradient Due to Extreme Greenhouse Gas Emissions</b>
 	<div class="journal"><i>Nature Communications</i> </div>
