added link to inclusion page

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 </li>
 
 <h2>Committment to Inclusion Statement</h2>
-<p>I believe that different perspectives and backgrounds contribute to a better understanding of our world and of the climate system. For this reason, I value a diverse research team and encourage the expression of different points of view, particularly of voices that have historically been suppressed or underrepresented in climate science. Coming from Germany, I know how much damage hate can produce, but I also know that people can change, reject hate, and embrace an inclusive and supportive community for everybody. However, I also believe that words are not enough and that we must continuously strive towards a more inclusive world.</p>
+<p>I believe that different perspectives and backgrounds contribute to a better understanding of our world and of the climate system. For this reason, I value a diverse research team and encourage the expression of different points of view, particularly of voices that have historically been suppressed or underrepresented in climate science. Coming from Germany, I know how much damage hate can produce, but I also know that people can change, reject hate, and embrace an inclusive and supportive community for everybody. However, I also believe that words are not enough and that we must continuously strive towards a more inclusive world. Specific activities regarding diversity and inclusion are listed <a class="publinks" href="inclusion.html">here.</a>.</div></p>
 
 </div><!--content-->
 <!--/div><!--container-->
