--- a/inclusion.html
+++ b/inclusion.html
@@ -25,17 +25,32 @@
 
 <div id="container" style="width:1100px">
 
-<p>Here some of my activities regarding inclusion, diversity and social justice.</p>
+<p>Here some of my activities regarding inclusion, diversity and social justice are listed.</p>
 
 <ul>
 
 <li>11-16-2021 Social Justice Education Initiative Workshop <a href="https://hr.oregonstate.edu/social-justice-education-initiative/workshop-descriptions">Tier One Plattform Workshop Session One</a>
 
 <li>11-08-2021 Authentic Research through Collaborative Learning (ARC-Learn) Mentoring Workshop <a href="https://ceoas.oregonstate.edu/arc-learn">Training Session 3</a>
+<ul>
+<b>Resources</b>
+<li>Commitment to inclusion statements: <a href="https://gratton.entomology.wisc.edu/equity-inclusion-statement/">Example 1</a> <a href="http://uscdevlab.com/our-team/ndd-lab-diversity-equity-and-inclusion-statement/">Example 2</a></li>
+<li>Mentoring agreements: <a href="https://academicaffairs.oregonstate.edu/research/faculty/sample-mentoring-agreement">Sample</a> </li>
+</ul>
 
-<li>11-01-2021 ARC-Learn Workshop <a href="https://ceoas.oregonstate.edu/arc-learn">Training Session 2</a>
+<li>11-01-2021 ARC-Learn Mentoring Workshop Training Session 2.
+<ul>
+<b>Resources</b>
+<li><a href="https://vimeo.com/502300589">Bettina Love on ally vs. co-conspirator (Video ~7mins)</a></li>
+<li><a href="https://www.nature.com/articles/d41586-021-01498-7"> “Use microaffirmations and call out microaggressions to help others” by Hannah Roberts</a></li>
+</ul>
 
-<li>10-19-2021 ARC-Learn Workshop <a href="https://ceoas.oregonstate.edu/arc-learn">Training Session 1</a>
+<li>10-19-2021 ARC-Learn Mentoring Workshop Training Session 1.
+<ul>
+<b>Resources</b>
+<li><a href="https://www.centerforengagedlearning.org/whats-their-capital-applying-a-community-cultural-wealth-model-to-ur/">“What’s Their Capital? Applying a Community Cultural Wealth Model to UR” by Dr. Buffie Longmire-Avital </a>
+<li><a href="https://broaderimpacts.netlify.app/undergraduate-research/index.html#/">Mentoring Guide</a>
+</ul>
 
 </ul>
 
