added wombo art to Repschlaeger paper

--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,7 @@
 		 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.107145">doi: 10.1016/j.quascirev.2021.107145</a>.</div>
 	<div class="publinks">
 		<a class="publinks" href="https://www.sciencedirect.com/science/article/pii/S0277379121003528">html</a>
+		<a class="publinks" href="https://app.wombo.art/card/37216455-df04-4e79-b252-455a2761cb98">wombo art</a>
 	</div>
 </li>
 
