--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
 <a id="in review"><h3>In Review / In Press</h3></a>
 
 <li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2021)<br> 
-	<b>UWorld Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
+	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
 	<div class="journal"><i>Earth System Science Data</i> </div>
 	<div class="publinks">
 		<a class="publinks" href="https://essd.copernicus.org/preprints/essd-2021-337/">Preprint</a>
