fixed video link

--- a/publications.html
+++ b/publications.html
@@ -97,9 +97,9 @@
 	<div class="journal"><i>Quaternary Science Reviews</i>, 257, 106844, 
 	 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.106844">doi: 10.1016/j.quascirev.2021.106844</div>
 	<div class="publinks">
-		<a class="publinks" href="https://authors.elsevier.com/a/1ceeF-4PR%7ER10">html</a>
+		<a class="publinks" href="hhttps://www.sciencedirect.com/science/article/abs/pii/S0277379121000512">html</a>
 		<a class="publinks" href="https://andreasschmittner.github.io/pdf/M/muglia21qsr.pdf">pdf</a>
-		<a class="publinks" href="https://youtu.be/80C-vUgE2r0?t=6238">video</a>
+		<a class="publinks" href="https://youtu.be/KaV8GAKDVvM">video</a>
 	</div>
 </li>
 
