--- a/Projects/Completed/OC3/index.html
+++ b/Projects/Completed/OC3/index.html
@@ -41,7 +41,7 @@
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
-<img src="https://andreasschmittner.github.io/Projects/PMIP/d13c_xav_t3.png" style="margin:-20px -50px -50px -40px">
+<img src="https://pastglobalchanges.org/sites/default/files/2021-08/OC3img-d13c_xav_t3.jpg" style="margin:-20px -50px -50px -40px">
 </div><!--figure-->
 <div style="width:450px;margin:0px 10px 10px 10px"> 
 <p>Fig. 1: Observed &#948<sup>13</sup>C distribution in the water column (top; Schmittner et al., 2013) and in surface
