--- a/inclusion.html
+++ b/inclusion.html
@@ -29,6 +29,8 @@
 
 <ul>
 
+<li>21-02-2022 Inclusive Excellence in Marine Education at OSU Communities of Practice: Presentation by Carmen Harjoe on Inclusive Practices in Introductory Biology Courses</li>
+
 <li>11-16-2021 Social Justice Education Initiative Workshop <a href="https://hr.oregonstate.edu/social-justice-education-initiative/workshop-descriptions">Tier One Plattform Workshop Session One</a></li>
 
 <li>11-08-2021 Authentic Research through Collaborative Learning <a href="https://ceoas.oregonstate.edu/arc-learn">(ARC-Learn) Mentoring Workshop </a>Training Session 3
