fixed url to Khatiwala et al. (2019)

--- a/publications.html
+++ b/publications.html
@@ -182,7 +182,7 @@
 <b>Air-sea disequilibrium enhances ocean carbon storage during glacial periods</b>
 <div class="journal"><i>Science Advances</i>, 5(6), doi: 10.1126/sciadv.aaw4981</div>
 <div class="publinks">
-<a class="publinks" href="https://advances.sciencemag.org/content/5/6/eaaw4981">html</a>
+<a class="publinks" href="https://www.science.org/doi/10.1126/sciadv.aaw4981">html</a>
 <a class="publinks" href="https://advances.sciencemag.org/content/advances/5/6/eaaw4981.full.pdf">pdf</a-->
 <a class="publinks" href="https://today.oregonstate.edu/news/study-may-solve-long-standing-mystery-why-atmospheric-co2-was-lower-during-ice-ages"> OSU Press Release</a>
 <a class="publinks" href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=298738&WT.mc_id=USNSF_1"> NSF News</a>
