added Kwon et al. (2022)

--- a/publications.html
+++ b/publications.html
@@ -52,15 +52,20 @@
 	</div>
 </li>
 
+<h3>Published</h3>
+
+<a id="2022"><h4>2022</h4></a>
 <li>Kwon, E. Y., A. Timmermann, B. J. Tipple, and A. Schmittner (2021)<br> 
-	<b>Unprecedented Reversal of the Oceanic Stable Carbon Isotope Ratio Depth Gradient with Continued Anthropogenic Carbon Emissions</b>
-	<div class="journal"><i>Nature Communications Earth & Environment</i> </div>
+	<b>Projected reversal of the oceanic stable carbon isotope ratio depth gradient with continued anthropogenic carbon emissions</b>
+	<div class="journal"><i>Nature Communications Earth & Environment,</i> 3, 62,
+		<a class="publinks" href="https://doi.org/10.1038/s43247-022-00388-8">doi: 10.1038/s43247-022-00388-8</a>.
+	</div>
 	<div class="publinks">
-		<a class="publinks" href=""></a>
+		<a class="publinks" href="https://www.nature.com/articles/s43247-022-00388-8">html</a>
+		<a class="publinks" href="https://www.nature.com/articles/s43247-022-00388-8.pdf">pdf</a>
 	</div>
 </li>
 
-<h3>Published</h3>
 <a id="2021"><h4>2021</h4></a>
 <li>Repschläger, J., N. Zhao, D. Rand, L. Lisiecki, J. Muglia, S. Mulitza, A. Schmittner, O. Cartapanis, H. Bauch, R. Schiebel, and G. Haug (2021)<br> 
 	<b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
