--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@ available and free for everybody do download and use. Click on the MODELS link a
 interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/climatevoices/schmittner/"> Here </a> is an interview about my life and career as part of OSU's Voices of a Warming Planet project.</p>
 
 <h2>Just Published</h2>
-<li>Repschläger, J., N., Zhao, D. Rand, L. Lisiecki, J. Muglia, S. Mulitza, A. Schmittner, O. Cartapanis, H. Bauch, R. Schiebel, and G. Haug (2021)<br> 
-	<b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
-	<div class="journal"><i>Quaternary Science Reviews,</i> 270, 107145, 
-		 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.107145">doi: 10.1016/j.quascirev.2021.107145</a>.</div>
+<li>Kwon, E. Y., A. Timmermann, B. J. Tipple, and A. Schmittner (2021)<br> 
+	<b>Projected reversal of the oceanic stable carbon isotope ratio depth gradient with continued anthropogenic carbon emissions</b>
+	<div class="journal"><i>Nature Communications Earth & Environment,</i> 3, 62,
+		<a class="publinks" href="https://doi.org/10.1038/s43247-022-00388-8">doi: 10.1038/s43247-022-00388-8</a>.
+	</div>
 	<div class="publinks">
-		<a class="publinks" href="https://www.sciencedirect.com/science/article/pii/S0277379121003528">html</a>
+		<a class="publinks" href="https://www.nature.com/articles/s43247-022-00388-8">html</a>
+		<a class="publinks" href="https://www.nature.com/articles/s43247-022-00388-8.pdf">pdf</a>
 	</div>
 </li>
 
