--- a/publications.html
+++ b/publications.html
@@ -44,18 +44,20 @@
 
 <a id="in review"><h3>In Review / In Press</h3></a>
 
-<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2021)<br> 
-	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
-	<div class="journal"><i>Earth System Science Data</i> </div>
-	<div class="publinks">
-		<a class="publinks" href="https://essd.copernicus.org/preprints/essd-2021-337/">Preprint</a>
-	</div>
-</li>
-
 <h3>Published</h3>
 
 <a id="2022"><h4>2022</h4></a>
-<li>Kwon, E. Y., A. Timmermann, B. J. Tipple, and A. Schmittner (2021)<br> 
+<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2021)<br> 
+	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
+	<div class="journal"><i>Earth System Science Data,</i>14, 2553–2611, 
+		<a class="publinks" href="https://doi.org/10.5194/essd-14-2553-2022">doi: 10.5194/essd-14-2553-2022</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://essd.copernicus.org/articles/14/2553/2022/">html</a>
+		<a class="publinks" href="https://essd.copernicus.org/articles/14/2553/2022/essd-14-2553-2022.pdf">pdf</a>
+	</div>
+</li>
+
+<li>Kwon, E. Y., A. Timmermann, B. J. Tipple, and A. Schmittner (2022)<br> 
 	<b>Projected reversal of the oceanic stable carbon isotope ratio depth gradient with continued anthropogenic carbon emissions</b>
 	<div class="journal"><i>Nature Communications Earth & Environment,</i> 3, 62,
 		<a class="publinks" href="https://doi.org/10.1038/s43247-022-00388-8">doi: 10.1038/s43247-022-00388-8</a>.
@@ -206,7 +208,7 @@
 
 <a id="2018"><h4>2018</h4></a>
 <li>Thibodeau, B., Not, C., Schmittner, A., Noone, D., Tabor, C., Zhang, J. and Z. Liu (2018)<br>
-<b>Last century warming over the Canadian Atlantic shelves linked to weak Atlantic Meridional Overturning Circululation</b>
+<b>Last century warming over the Canadian Atlantic shelves linked to weak Atlantic Meridional Overturning Circulation</b>
 <div class="journal"><i>Geophys. Res. Let.</i>, 45, 12,376-12,385, <a class="publinks" href="http://doi.org/10.1029/2018GL080083">doi:10.1029/2018GL080083</a>.</div>
 <div class="publinks">
 <a class="publinks" href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2018GL080083">html</a>
