--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@ available and free for everybody do download and use. Click on the MODELS link a
 interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/climatevoices/schmittner/"> Here </a> is an interview about my life and career as part of OSU's Voices of a Warming Planet project.</p>
 
 <h2>Just Published</h2>
-<li>Kwon, E. Y., A. Timmermann, B. J. Tipple, and A. Schmittner (2021)<br> 
-	<b>Projected reversal of the oceanic stable carbon isotope ratio depth gradient with continued anthropogenic carbon emissions</b>
-	<div class="journal"><i>Nature Communications Earth & Environment,</i> 3, 62,
-		<a class="publinks" href="https://doi.org/10.1038/s43247-022-00388-8">doi: 10.1038/s43247-022-00388-8</a>.
-	</div>
+<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2021)<br> 
+	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
+	<div class="journal"><i>Earth System Science Data,</i>14, 2553–2611, 
+		<a class="publinks" href="https://doi.org/10.5194/essd-14-2553-2022">doi: 10.5194/essd-14-2553-2022</a></div>
 	<div class="publinks">
-		<a class="publinks" href="https://www.nature.com/articles/s43247-022-00388-8">html</a>
-		<a class="publinks" href="https://www.nature.com/articles/s43247-022-00388-8.pdf">pdf</a>
+		<a class="publinks" href="https://essd.copernicus.org/articles/14/2553/2022/">html</a>
+		<a class="publinks" href="https://essd.copernicus.org/articles/14/2553/2022/essd-14-2553-2022.pdf">pdf</a>
 	</div>
 </li>
 
