--- a/inclusion.html
+++ b/inclusion.html
@@ -29,9 +29,9 @@
 
 <ul>
 
-<li>21-04-2022 Inspiring <a href="https://oregonstate.zoom.us/rec/play/f8ACsWwI0Y0vRPOM47USHAKX4hut9QZ74ox1mj4w6R-eYHnqgfGwPhaflA4IfJ_w2STMXxABiNIaDuUP.J9XnjFsyAhUGXfOq?continueMode=true&_x_zm_rtaid=4zLUM08oTx2hoeIfb4BQEg.1650667826431.8bef20f2a49121f302c398d05a94d27b&_x_zm_rhtaid=639"> talk </a> by Dawn Wright "The Courage to Escape"</li>
+<li>04-21-2022 Inspiring <a href="https://oregonstate.zoom.us/rec/play/f8ACsWwI0Y0vRPOM47USHAKX4hut9QZ74ox1mj4w6R-eYHnqgfGwPhaflA4IfJ_w2STMXxABiNIaDuUP.J9XnjFsyAhUGXfOq?continueMode=true&_x_zm_rtaid=4zLUM08oTx2hoeIfb4BQEg.1650667826431.8bef20f2a49121f302c398d05a94d27b&_x_zm_rhtaid=639"> talk </a> by Dawn Wright "The Courage to Escape"</li>
 
-<li>21-02-2022 Inclusive Excellence in Marine Education at OSU Communities of Practice: Presentation by Carmen Harjoe on Inclusive Practices in Introductory Biology Courses</li>
+<li>02-21-2022 Inclusive Excellence in Marine Education at OSU Communities of Practice: Presentation by Carmen Harjoe on Inclusive Practices in Introductory Biology Courses</li>
 
 <li>11-16-2021 Social Justice Education Initiative Workshop <a href="https://hr.oregonstate.edu/social-justice-education-initiative/workshop-descriptions">Tier One Plattform Workshop Session One</a></li>
 
@@ -57,6 +57,15 @@
 <li><a href="https://www.centerforengagedlearning.org/whats-their-capital-applying-a-community-cultural-wealth-model-to-ur/">“What’s Their Capital? Applying a Community Cultural Wealth Model to UR” by Dr. Buffie Longmire-Avital </a>
 <li><a href="https://broaderimpacts.netlify.app/undergraduate-research/index.html#/">Mentoring Guide</a>
 </ul>
+</li>
+
+<li>08-02-2021 Modeling Past and Future Climate. Presentation at <a href="https://icedrill-education.org/school-of-ice-2021-oregon-state-university/">School of Ice 2021</a> in Corvallis. The School of Ice educates faculty at minority-serving institutions.
+</li>
+
+<li>2011-2013 Mentor of <a href="http://ides.science.oregonstate.edu/">IDES (Increasing Diversity in Earth Sciences)</a> Program. I mentored a female, Indian-American community college student Sundeep Kaur, who proceeded to study civil engineering.
+</li>
+
+<li>2009-2022 I supervised 10 mostly female students as part of the <a href="hhttps://ceoas.oregonstate.edu/summer-research-internships-undergraduates">REU (Research Experience for Undergraduates)</a> Program.
 </li>
 
 </ul>
