--- a/presentations.html
+++ b/presentations.html
@@ -49,6 +49,7 @@
 
 <h2>Scientific Presentations</h2>
 <ul>
+<li>06-08-2021 <b>Tidal Mixing in the Glacial Ocean</b> Gordon Research Conference on Ocean Mixing, Mount Holyoke College. <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner1/lgmmixingpdf">pdf</a>
 <li>02-08-2021 <b>Glacial Deoxygenation Driven by Increased Disequilibrium</b> CESM Paleoclimate Working Group Meeting. <a class="publinks" href="https://youtu.be/NHrsLINxdCY?t=7234"> recording</a>
 <li>05-12-2020 <b>Meridional Overturning and Mixing in the Glacial Ocean</b> CEOAS Physics of Oceans and Atmospheres Seminar. <a class="publinks" href="https://media.oregonstate.edu/media/t/1_db6so68i"> recording</a>
 <li>04-15-2020 <b>Modeling Tidal Mixing in the Glacial Ocean</b> CESM Ocean Modeling Group Meeting. <a class="publinks" href="http://www.cesm.ucar.edu/events/wg-meetings/2020/files/ocean/Schmittner.pdf"> pdf</a>
